k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: k8sdemo
  labels:
    app.kubernetes.io/part-of: k8sdemo
    environment: development
