k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: k8sdemo-ingress
  namespace: k8sdemo
  labels:
    app.kubernetes.io/part-of: k8sdemo
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: "10m"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - carrot-atelier.online
        - www.carrot-atelier.online
      secretName: carrot-atelier-tls
  rules:
    - host: carrot-atelier.online
      http: &http_rules
        paths:
          # Wafer BI Frontend
          - path: /()(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: wafer-frontend-svc
                port:
                  number: 80
          # Wafer BI Backend API
          - path: /api(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: wafer-backend-svc
                port:
                  number: 8000
    - host: www.carrot-atelier.online
      http: *http_rules
